--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,99 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+.like-icon {
+    fill: var(--bg-color);
+    inline-size: 39px;
+    block-size: 36px;
+}
+
+    .like-icon .heart {
+        transition: fill .1s;
+        transform-origin: center center;
+    }
+
+    /* Сердце */
+    .like-icon .main-body {
+        fill: var(--bg-color);
+        transition: fill .3s;
+    }
+
+.card__icon-button:hover .main-body {
+    fill: var(--accent-color);
+    transition: fill .5s 3ms;
+}
+
+.card__icon-button:active .main-body {
+    fill: var(--heart-color);
+    transition: fill .3s 6ms;
+}
+
+.like-icon.is-liked .main-body {
+    fill: var(--heart-color);
+    transition: fill .3s 3ms;
+}
+
+/* Плюс */
+.like-icon .core {
+    fill: var(--bg-color);
+    transition: fill .3s 5ms;
+}
+
+.card__icon-button:hover .core {
+    fill: var(--accent-color);
+    transition: fill .3s 3ms;
+}
+
+.card__icon-button:active .core {
+    fill: var(--heart-color);
+    transition: fill .3s;
+}
+
+.like-icon.is-liked .core {
+    fill: var(--heart-color);
+    transition: fill .3s;
+}
+
+/* Контур */
+.like-icon .contour {
+    fill: var(--accent-color);
+}
+
+.like-icon.is-liked .contour {
+    fill: var(--heart-color);
+    transition: fill .3s 5ms;
+}
+
+/* Искры */
+.like-icon .sparks {
+    opacity: 0;
+    fill: var(--heart-color);
+}
+
+.like-icon.is-liked .sparks {
+    animation: sparks .3s ease;
+}
+
+.like-icon.is-liked .heart {
+    animation: scale .3s ease;
+}
+
+@keyframes scale {
+    from {
+        scale: 0;
+    }
+
+    to {
+        scale: 1;
+    }
+}
+
+@keyframes sparks {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
