--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,7 +4,6 @@
     --accent-font: 'PressStart2P', 'PressStart2P-Regular', monospace;
     /* Основные цвета */
     --bg-color: #ffffff;
-    --text-color: #000000;
     --accent-color: #000000;
     --border-color: #000000;
     --stroke-color: #ffffff;
@@ -12,10 +11,32 @@
     /* Цвета для кнопок */
     --mix-blend-color: #ffffff;
     --button-bg-color: #000000;
-    /* Градиенты */
-    --linear-gradient-first: #d3d3d3;
-    --linear-gradient-second: transparent;
+
     /* Веса шрифтов */
     --header-weight: 700;
     --text-weight: 400;
+/*градиенты */
+    --bg-image: 
+        /*горизонтальные полосы*/
+      repeating-linear-gradient(
+        to right, 
+        #d3d3d3 0px,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+        ), 
+        /*вертикальные полосы*/
+      repeating-linear-gradient(
+        to bottom, 
+        #d3d3d3 0px,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+        ),
+     linear-gradient(
+        to bottom,
+        #e7e7e7 0.01%,
+        #1a1a1a
+    );
 }
+
